tests/cases/errors/compile_call_missing_close_paren.lox
// A call expression must have a closing ')' after its argument list.
// expect compile error: Expect ')' after arguments.
fun foo(a) {}
foo(1;
